# lumy

./: .clinerules  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODING_STANDARDS.md  DartConfiguration.tcl  LAYOUT_IMPROVEMENTS.md  LICENSE  M1_ACTION_PLAN.md  M1_IMPLEMENTATION_SUMMARY.md  M1_NEXT_STEPS_GUIDE.md  PROGRESSO_LAYERS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  TEST_EXECUTION_REPORT.md  VISION.md  contributing.md  log.txt  map_loader.py  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  WARP.md  events.md  hello-town-guide.md  map_tmx.md  save-system.md  scene_flow.md
docs/milestones/: M1.1_ACTION_PLAN.md  M1_COMPLETION_STATUS.md  M1_UPDATE_SUMMARY.md  SPLITTER_IMPROVEMENTS.md  TESTS_IMPLEMENTED.md  TEST_SUCCESS_REPORT.md
docs/schemas/: actor.json.example
editor/: collision_overlay.cpp  collision_overlay.h  command.cpp  command.h  editor_events.cpp  editor_events.h  editor_frame.cpp  editor_frame.h  file_watcher.cpp  file_watcher.h  gl_buffer.cpp  gl_buffer.h  global_locale.h  grid_renderer.cpp  grid_renderer.h  i18n.cpp  i18n.h  layer.cpp  layer.h  layer_manager.cpp  layer_manager.h  layer_panel.cpp  layer_panel.h  left_side_panel.cpp  left_side_panel.h  main.cpp  map.cpp  map.h  map_manager.cpp  map_manager.h  map_renderer.cpp  map_renderer.h  map_tabs_panel.cpp  map_tabs_panel.h  new_project_dialog.cpp  new_project_dialog.h  paint_toolbar.cpp  paint_toolbar.h  paint_tools.cpp  paint_tools.h  (+23 more)
editor/locale/: en_US.json  pt_BR.json
editor/shaders/: grid_fragment.glsl  grid_vertex.glsl  overlay.frag  overlay.vert  overlay_fragment.glsl  tile_fragment.glsl  tile_vertex.glsl
examples/hello-town/: first.tmx  hello.tmx  hello_tileset.tsx  test_tileset.tsx  tileset.tsx
game/assets/maps/: hello.tmx  tileset.tsx
game/data/: actors.json  enemies.json  events.json  items.json  skills.json  states.json  system.json
game/saves/: save1.json  save2.json  save3.json  save4.json
locale/: README.md  en_US.json  pt_BR.json
src/: boot_scene.cpp  boot_scene.hpp  delta_time.cpp  delta_time.hpp  event_system.cpp  event_system.hpp  main.cpp  map.cpp  map.hpp  map_scene.cpp  map_scene.hpp  save_system.cpp  save_system.hpp  scene.cpp  scene.hpp  scene_stack.cpp  scene_stack.hpp  texture_manager.cpp  texture_manager.hpp  title_scene.cpp  title_scene.hpp
tests/: basic_startup.cpp  collision.cpp  delta_time.cpp  scene_flow.cpp  scene_loop_close.cpp  scene_stack.cpp  title_scene.cpp
tests/editor/: layer_manager_test.cpp  map_test.cpp  paint_tools_test.cpp
